--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/user-event": "^14.5.1",
     "prettier": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
@@ -26,8 +24,8 @@
     "@commitlint/config-conventional": "^18.4.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
@@ -39,6 +37,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
     "jsdom": "^22.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "styled-components": "^6.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
