--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource-variable/dm-sans": "^5.0.3",
+    "@fontsource/dm-serif-text": "^5.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/user-event": "^14.5.1",
     "prettier": "^3.1.0",
